Add background image

--- a/client/src/app/user/user.component.html
+++ b/client/src/app/user/user.component.html
@@ -1,8 +1,14 @@
-<div class="wrapper">
-  <div id="formContent">
-    <h1><b><i>AEPD</i></b></h1>
-    <h2 class="underlineHover"  routerLink="/login"  routerLinkActive="active"> Sign In </h2>
-    <h2 class="underlineHover"  routerLink="/signup"  routerLinkActive="active">Sign Up </h2>
-    <router-outlet></router-outlet>
+<div class="bg">
+  <div class="wrapper">
+    <div id="formContent">
+      <h1><b><i>AEPD v0.0.1</i></b></h1>
+      <h2 class="underlineHover"  routerLink="/login"  routerLinkActive="active"> Sign In </h2>
+      <h2 class="underlineHover"  routerLink="/signup"  routerLinkActive="active">Sign Up </h2>
+      <router-outlet></router-outlet>
+    </div>
   </div>
+</div>
+
+<div class="container">
+  <h2 align="centre">@copyright caetech 2019</h2>
 </div>
