--- a/client/src/app/pages/examples/examples.component.html
+++ b/client/src/app/pages/examples/examples.component.html
@@ -2,7 +2,7 @@
 <table *ngIf="userDetails" class="table-fill">
   <thead>
   <tr>
-    <th colspan="2" class="text-center">User Profile</th>
+    <th colspan="2" class="text-center"> Profile</th>
   </tr>
   </thead>
   <tbody>
