--- a/client/src/app/pages/examples/examples.component.html
+++ b/client/src/app/pages/examples/examples.component.html
@@ -35,7 +35,7 @@
           <nav class="navbar navbar-vertical navbar-expand-lg navbar-light mt-2">
             <div class="text-center">
               <a class="navbar-brand" href="#">AEPD</a>&nbsp;
-              <div class="badge badge-green">v0.0.1</div>
+              <div class="badge badge-info">v0.0.1</div>
               <button class="navbar-toggler" type="button"
                       data-toggle="collapse"
                       data-target="#navbarSupportedContent"
