--- a/client/src/app/user/sign-up/sign-up.component.html
+++ b/client/src/app/user/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <div>
-  <img src="/assets/img/users.png" id="icon" alt="User Icon" />
+  <img src="/assets/img/gs_image_glasscar_mcv_powertrain_ev_stage01_201708111137x640.jpg" id="icon" alt="User Icon" />
 </div>
 <form #signUpForm="ngForm" (ngSubmit)="signUpForm.valid && onSubmit(signUpForm)">
   <input type="text" #fullName="ngModel" [(ngModel)]="userService.selectedUser.fullName" name="fullName" placeholder="Full Name"
