--- a/client/src/app/user/user.component.html
+++ b/client/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <!--Navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
   <div class="container">
-    <a class="navbar-brand" href="#"><strong>News</strong></a>
+    <a class="navbar-brand" href="https://www.bbc.co.uk/news"><strong>News</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
             aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -37,6 +37,7 @@
   </div>
 </div>
 
+<!--footer-->
 <div class="container">
   <h2 align="centre">@copyright caetech 2019</h2>
 </div>
