--- a/client/src/app/user/user.component.html
+++ b/client/src/app/user/user.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="https://www.fluxsys.co.uk/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Documents</a>
@@ -36,6 +36,7 @@
     </div>
   </div>
 </div>
+
 
 <!--footer-->
 <div class="container">
